	- Fixed counting bug in parsing "->" operator.
	
Fri Jun 13 10:11:12 CEST 2003

	- Enable FETCH without INTO.
	- Compatibility functions for INFORMIX handling of DECLARE statement.

Sun Jun 15 11:18:58 CEST 2003

	- Applied multi-threading patch by Lee Kindess <lkindness@csl.co.uk>
	- Changed order of types in enum to make working with these easier.
	
Tue Jun 17 08:45:14 CEST 2003

	- Fixed several parsing bugs.
	
Thu Jun 19 10:08:26 CEST 2003

	- Added missing rdayofweek function for Informix compatibility.
	- Fixed fetch into char pointer.
	
Fri Jun 20 13:23:07 CEST 2003

	- Enabled constants in using clause.
	
Fri Jun 20 15:34:29 CEST 2003

	- For Informix compatibility we have to accept a "free <cursor>".
	- Synced scan.l and pgc.l.
	
Sun Jun 22 11:20:29 CEST 2003

	- Fixed missing '\0' in output char pointer.
	
Wed Jun 25 09:29:34 CEST 2003

	- Synced keyword.x and preproc.y/gram.y.
	- Implemented Informix special way to treat NULLs.
	
Thu Jun 26 13:26:13 CEST 2003

	- Added another compatibility level INFORMIX_SE.
	- Synced again.
	
Sun Jun 29 11:22:48 CEST 2003

	- Just another sync.
	- Made sure Informix style decimal vars are initialized. They use a
	  fixed amount of digits and not an allocated one. So we have to work
	  around. PostgreSQL numeric type remains the same.
	- In INFORMIX_SE mode with autcommit set, make all cursors be "with
	  hold". Is this really they way SE behaves?
	  
Tue Jul  1 11:57:56 CEST 2003

	- Use ISO dates in pgtypeslib by default.
	- Applied patch by Philip Yarra to fix some thread issues.
	- Added a new data type "decimal" which is mostly the same as our
	  "numeric" but uses a fixed length array to store the digits. This is
	  for compatibility with Informix and maybe others.
	  
Wed Jul  2 09:45:59 CEST 2003

	- Fixed initialization bug in compatlib.
	- Added postgres_fe.h to all files in pgtypeslib.
	- Set ecpg version to 3.0.0
	- Set ecpg library to 4.0.0
	- Set pgtypes library to 1.0.0
	- Set compat library to 1.0.0
